# cortex-installer

./: .gitignore  LICENSE  bootstrap.sh  pyproject.toml  values.yaml
thalamus/: kubernetes.py  main.py  nginx.py  sudo.py  utils.py  values.py
